--- a/tests/User_Model_Test.html
+++ b/tests/User_Model_Test.html
@@ -9,6 +9,13 @@ class User_Model_Test extends PHPUnit_Framework_TestCase {
 		$this->CI->load->model('UserModel');
 	}
 
+	public function testAddUser()
+	{
+		$result = $this->CI->UserModel->add_user('Essai', 'essai', 'nicolas', 'sabella', 'Male', '1992-07-08', 'Nogent', 'essai@essai');
+
+		$this->assertEquals(TRUE, $result);
+	}
+
 	public function testGetUser()
 	{
 		$u = $this->CI->UserModel->get_user('Clem', '49c040447d066cb774f12f6134ff0b7d');
@@ -20,7 +27,7 @@ class User_Model_Test extends PHPUnit_Framework_TestCase {
 	{
 		$users = $this->CI->UserModel->get_all_user();
 
-		$this->assertEquals(5, count($users));
+		$this->assertEquals(6, count($users));
 	}
 
 	public function testGetUserByEmail()
